--- a/src/styles.css
+++ b/src/styles.css
@@ -13,7 +13,7 @@ button {
   padding: 15px 25px;
   margin: 0 auto;
   border-radius: 10px;
-  background-color: rgb(17, 75, 17);
+  background-color: rgba(17, 75, 17, 0.8);
   color: #fff;
   font-size: 20px;
 }
@@ -32,6 +32,21 @@ button {
   margin: 0 auto;
   max-width: 95%;
   padding-bottom: 30px;
+}
+.dice {
+  width: 80px;
+  height: 80px;
+  border: 1px solid rgba(1, 3, 2, 0.75);
+  border-radius: 3px;
+  box-shadow: 1px 1px 1px 1px rgba(1, 3, 2, 0.3);
+  margin: 0 0 10px 5px;
+}
+.dice p {
+  text-align: center;
+  font-size: 40px;
+  font-weight: bold;
+  color: rgba(1, 3, 2, 0.75);
+  line-height: 0px;
 }
 .playerInfo {
   margin: 0px 15px;
