--- a/src/styles.css
+++ b/src/styles.css
@@ -10,12 +10,13 @@ footer {
 }
 button {
   display: block;
-  padding: 15px 25px;
+  padding: 10px 30px;
   margin: 0 auto;
-  border-radius: 10px;
+  border-radius: 25px;
   background-color: rgba(17, 75, 17, 0.8);
   color: #fff;
   font-size: 20px;
+  cursor: pointer;
 }
 .container {
   display: block;
@@ -37,8 +38,9 @@ button {
   width: 80px;
   height: 80px;
   border: 1px solid rgba(1, 3, 2, 0.75);
-  border-radius: 3px;
-  box-shadow: 1px 1px 1px 1px rgba(1, 3, 2, 0.3);
+  background-color: rgba(254, 255, 250, 0.55);
+  border-radius: 4px;
+  box-shadow: 1px 1px 1px 1px rgba(0, 10, 5, 0.45);
   margin: 0 0 10px 5px;
 }
 .dice p {
