--- a/src/styles.css
+++ b/src/styles.css
@@ -97,11 +97,31 @@ button {
   margin: 0px 15px;
   vertical-align: middle;
 }
+
+/* grid-style gameboard
+#snake1,
+#snake2,
+#snake3 {
+  max-width: 65px;
+  min-height: 65px;
+  display: block;
+  margin: 0 auto;
+}
+#ladder1,
+#ladder2,
+#ladder3 {
+  max-width: 50px;
+  min-height: 50px;
+  display: block;
+  position: relative;
+  top: 28px;
+} */
 .gameBoard {
   display: grid;
   margin: 0 auto;
-  grid-template-columns: repeat(5, 1fr);
-  grid-template-rows: repeat(5, 1fr);
+  display: grid;
+  grid-template-columns: repeat(7, 1fr);
+  grid-template-rows: repeat(7, 1fr);
   grid-column-gap: 1px;
   grid-row-gap: 1px;
   border: 1px solid rgba(32, 110, 32, 0.7);
@@ -111,112 +131,199 @@ button {
   background-color: #e2ffeb96;
 }
 
-.startLine {
-  /*don't need border eventually? just need to check avatar moves */
+#startLine {
+  grid-area: 7 / 1 / 8 / 2;
   border: 1px solid rgba(32, 110, 32, 0.7);
-  border-radius: 5px;
-  height: 50px;
-  width: 150px;
-  position: relative;
-  top: 20px;
 }
-.div1 {
+#div1 {
+  grid-area: 7 / 2 / 8 / 3;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+}
+#div2 {
+  grid-area: 7 / 3 / 8 / 4;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+}
+#div3 {
+  grid-area: 7 / 4 / 8 / 5;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+}
+#div4 {
+  grid-area: 7 / 5 / 8 / 6;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+}
+#div5 {
+  grid-area: 7 / 6 / 8 / 7;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+}
+#div6 {
+  grid-area: 7 / 7 / 8 / 8;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+}
+#div7 {
+  grid-area: 6 / 7 / 7 / 8;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+}
+#div8 {
+  grid-area: 6 / 6 / 7 / 7;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+}
+#div9 {
+  grid-area: 6 / 5 / 7 / 6;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+}
+#div10 {
+  grid-area: 6 / 4 / 7 / 5;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+}
+#div11 {
+  grid-area: 6 / 3 / 7 / 4;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+}
+#div12 {
+  grid-area: 6 / 2 / 7 / 3;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+}
+#div13 {
+  grid-area: 6 / 1 / 7 / 2;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+}
+#div14 {
   grid-area: 5 / 1 / 6 / 2;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div2 {
+#div15 {
   grid-area: 5 / 2 / 6 / 3;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div3 {
+#div16 {
   grid-area: 5 / 3 / 6 / 4;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div4 {
+#div17 {
   grid-area: 5 / 4 / 6 / 5;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div5 {
+#div18 {
   grid-area: 5 / 5 / 6 / 6;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div6 {
+#div19 {
+  grid-area: 5 / 6 / 6 / 7;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+}
+#div20 {
+  grid-area: 5 / 7 / 6 / 8;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+}
+#div21 {
+  grid-area: 4 / 7 / 5 / 8;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+}
+#div22 {
+  grid-area: 4 / 6 / 5 / 7;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+}
+#div23 {
   grid-area: 4 / 5 / 5 / 6;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div7 {
+#div24 {
   grid-area: 4 / 4 / 5 / 5;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div8 {
+#div25 {
   grid-area: 4 / 3 / 5 / 4;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div9 {
+#div26 {
   grid-area: 4 / 2 / 5 / 3;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div10 {
+#div27 {
   grid-area: 4 / 1 / 5 / 2;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div11 {
+#div28 {
   grid-area: 3 / 1 / 4 / 2;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div12 {
+#div29 {
   grid-area: 3 / 2 / 4 / 3;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div13 {
+#div30 {
   grid-area: 3 / 3 / 4 / 4;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div14 {
+#div31 {
   grid-area: 3 / 4 / 4 / 5;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div15 {
+#div32 {
   grid-area: 3 / 5 / 4 / 6;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div16 {
+#div33 {
+  grid-area: 3 / 6 / 4 / 7;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+}
+#div34 {
+  grid-area: 3 / 7 / 4 / 8;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+}
+#div35 {
+  grid-area: 2 / 7 / 3 / 8;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+}
+#div36 {
+  grid-area: 2 / 6 / 3 / 7;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+}
+#div37 {
   grid-area: 2 / 5 / 3 / 6;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div17 {
+#div38 {
   grid-area: 2 / 4 / 3 / 5;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div18 {
+#div39 {
   grid-area: 2 / 3 / 3 / 4;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div19 {
+#div40 {
   grid-area: 2 / 2 / 3 / 3;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div20 {
+#div41 {
   grid-area: 2 / 1 / 3 / 2;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div21 {
+#div42 {
   grid-area: 1 / 1 / 2 / 2;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div22 {
+#div43 {
   grid-area: 1 / 2 / 2 / 3;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div23 {
+#div44 {
   grid-area: 1 / 3 / 2 / 4;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div24 {
+#div45 {
   grid-area: 1 / 4 / 2 / 5;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
-.div25 {
+#div46 {
   grid-area: 1 / 5 / 2 / 6;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+}
+#div47 {
+  grid-area: 1 / 6 / 2 / 7;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+}
+#div48 {
+  grid-area: 1 / 7 / 2 / 8;
   border: 1px solid rgba(32, 110, 32, 0.7);
 }
