--- a/dice-sources/dice-style.css
+++ b/dice-sources/dice-style.css
@@ -14,8 +14,7 @@ h1 {
 h3,
 h4 {
   color: rgba(11, 43, 11, 0.9);
-  padding-top: 0px;
-  padding-right: 10px;
+  padding-top: 5px;
   text-align: center;
 }
 #player1,
@@ -94,6 +93,18 @@ button {
 .playerInfo {
   display: flex;
   justify-content: center;
+}
+
+#name1,
+#name2 {
+  text-align: center;
+  padding-bottom: 5px;
+}
+#avatar1 img,
+#avatar2 img {
+  transform: scale(1.25);
+  display: block;
+  margin: 0 auto;
 }
 .scoreboard {
   display: block;
