--- a/dice-sources/dice-style.css
+++ b/dice-sources/dice-style.css
@@ -17,6 +17,23 @@ h4 {
   padding-top: 5px;
   text-align: center;
 }
+footer {
+  text-align: center;
+  font-size: 14px;
+}
+
+button {
+  display: inline-block;
+  padding: 8px 30px;
+  margin: 0 auto;
+  border-radius: 25px;
+  background-color: rgba(17, 75, 17, 0.8);
+  color: #fff;
+  font-size: 20px;
+  cursor: pointer;
+  font-family: "Comfortaa", cursive;
+}
+
 #player1,
 #player2 {
   font-weight: 900;
@@ -24,22 +41,15 @@ h4 {
   font-size: 14px;
   text-align: center;
 }
-footer {
-  text-align: center;
-}
-button {
-  display: inline-block;
-  padding: 10px 30px;
-  margin: 0 auto;
-  border-radius: 25px;
-  background-color: rgba(17, 75, 17, 0.8);
-  color: #fff;
-  font-size: 20px;
-  cursor: pointer;
-}
-.buttons {
+
+.rollingButtons {
   display: flex;
   justify-content: space-around;
+}
+.yesNoButton {
+  display: flex;
+  justify-content: space-around;
+  padding: 5px 15px;
 }
 
 .faces {
@@ -104,7 +114,7 @@ button {
 #avatar2 img {
   transform: scale(1.25);
   display: block;
-  margin: 0 auto;
+  margin: 0 auto 3px;
 }
 .scoreboard {
   display: block;
@@ -113,6 +123,20 @@ button {
   border-radius: 5px;
   width: 100px;
   height: 100px;
+}
+.finalScore {
+  font-size: 25px;
+}
+
+.newGamePopup {
+  /* leave it invisible until end of game */
+  visibility: hidden;
+  text-align: center;
+  border: 1px solid rgba(32, 110, 32, 0.7);
+  border-radius: 5px;
+  display: block;
+  margin: 10px auto;
+  width: 90%;
 }
 
 #gameBoard {
